# snake-game

./: .gitignore  CMakeLists.txt  README.md
include/: defs.hpp  interface.hpp
src/: interface.cpp  main.cpp
